replaced names all over

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,8 +103,8 @@ import DisplayTable from '../components/DisplayTable.astro';
 	}
 </style>
 
-<Layout title="TAM 251 - Spring 25">
-    <p>Welcome! This is the official course website for TAM 251 at UIUC in Spring 25.</p>
+<Layout title="TAM 212 - Spring 25">
+    <p>Welcome! This is the official course website for TAM 212 at UIUC in Spring 25.</p>
 
     
 	<SubSection id="assignments" title="Graded assignments">
@@ -207,7 +207,7 @@ import DisplayTable from '../components/DisplayTable.astro';
 	<div class="d-flex flex-column flex-lg-row flex-fill mt-3">
 		<p class="pe-0 pe-lg-2">Access the course reference pages, a free and interactive short-form textbook designed at Illinois, at this link:</p>
 		<div class="d-flex align-items-center flex-column" style="border: 2px solid var(--bs-border-color); border-radius: 10px; overflow: hidden;">
-			<a href="https://mechref.org/sol" class="text-decoration-none" id="ref-pages-ad">
+			<a href="https://mechref.org/dyn" class="text-decoration-none" id="ref-pages-ad">
 			
 				<div class="d-flex flex-row">
 					<img src="/image.png" class="d-block" alt="Reference page animation example" style="border: 2px solid white" height="300"/>
@@ -221,10 +221,10 @@ import DisplayTable from '../components/DisplayTable.astro';
 	</div>
 	
     
-    <p class="mt-3">Please fill out the <a href="https://forms.office.com/r/e8whXc37An" class="themed-text fw-bold"> Excused Absence Requests for TAM 251 HERE</a>.</p>
+    <p class="mt-3">Please fill out the <a href="https://forms.office.com/r/e8whXc37An" class="themed-text fw-bold"> Excused Absence Requests for TAM 212 HERE</a>.</p>
 
 	</SubSection>
-	<SubSection id="calendar" title="TAM 251 Course Organization">
+	<SubSection id="calendar" title="TAM 212 Course Organization">
 
     <p><em>This is a living document providing the general structure of the course: All assessments subject to change.</em></p>
 
